[package]
name = "sitebuilder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1", features = ["full"] }
warp = "0.3"

[dev-dependencies]
sqlx-cli = { version = "0.8", default-features = false, features = ["native-tls", "postgres"] }
